--- a/1/aula/package.json
+++ b/1/aula/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GoStack-Node1-Aula",
+  "name": "gostack-node-1-aula",
   "version": "1.0.0",
   "main": "src/index.js",
   "repository": {
