--- a/1/desafio/package.json
+++ b/1/desafio/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GoStack-Node1-Desafio",
+  "name": "gostack-node-1-desafio",
   "version": "1.0.0",
   "main": "src/index.js",
   "repository": {
