--- a/aulas/modulo2/package.json
+++ b/aulas/modulo2/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "express": "^4.16.4",
-    "nunjucks": "^3.2.0"
+    "nunjucks": "^3.2.0",
+    "pg": "^7.9.0",
+    "sequelize": "^5.2.1"
   },
   "devDependencies": {
     "eslint": "^5.15.3",
@@ -27,6 +29,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "sequelize-cli": "^5.4.0"
   }
 }
