--- a/aulas/modulo2/package.json
+++ b/aulas/modulo2/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.4",
     "nunjucks": "^3.2.0",
     "pg": "^7.9.0",
+    "require-dir": "^1.2.0",
     "sequelize": "^5.2.1"
   },
   "devDependencies": {
