--- a/aulas/modulo2/package.json
+++ b/aulas/modulo2/package.json
@@ -16,6 +16,7 @@
     "start": "nodemon src/index.js -e js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
     "nunjucks": "^3.2.0",
     "pg": "^7.9.0",
