--- a/aulas/modulo2/package.json
+++ b/aulas/modulo2/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
+    "multer": "^1.4.1",
     "nunjucks": "^3.2.0",
     "pg": "^7.9.0",
     "require-dir": "^1.2.0",
