--- a/aulas/modulo2/package.json
+++ b/aulas/modulo2/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^3.4.1",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "multer": "^1.4.1",
     "nunjucks": "^3.2.0",
     "pg": "^7.9.0",
