--- a/aulas/modulo2/.env
+++ b/aulas/modulo2/.env
@@ -1,2 +1,14 @@
 NODE_ENV = 'development'
-PORT = 5000
+
+SERVER_PORT = 3000
+
+PG_HOST = '127.0.0.1'
+PG_USER = 'docker'
+REDIS_PORT = '5432'
+PG_PASS = 'docker'
+PG_DB = 'gonodemodulo2'
+
+REDIS_HOST = '127.0.0.1'
+REDIS_PORT = '6379'
+
+SESSION_SECRET = 'MyAppSecret'
