--- a/aulas/modulo2/package.json
+++ b/aulas/modulo2/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "connect-redis": "^3.4.1",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
