Visualização do avatar

--- a/aulas/modulo2/.env
+++ b/aulas/modulo2/.env
@@ -4,7 +4,7 @@ SERVER_PORT = 3000
 
 PG_HOST = '127.0.0.1'
 PG_USER = 'docker'
-REDIS_PORT = '5432'
+PG_PORT = '5432'
 PG_PASS = 'docker'
 PG_DB = 'gonodemodulo2'
 
