--- a/aulas/modulo2/package.json
+++ b/aulas/modulo2/package.json
@@ -22,6 +22,8 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.23",
     "multer": "^1.4.1",
     "nunjucks": "^3.2.0",
     "pg": "^7.9.0",
